Outline is not visible in certain cases.
Use focus color for outline and background color.

--- a/plonetheme/onegovbear/theme/scss/content.scss
+++ b/plonetheme/onegovbear/theme/scss/content.scss
@@ -15,6 +15,10 @@ a,
     color: $link-hover-color;
     text-decoration: $link-hover-decoration;
   }
+  &:focus {
+    outline: $link-focus-color solid 5px;
+    background-color: $link-focus-color;
+  }
 }
 
 fieldset {
