Adjust spacing for logo.
Fixes 2.2, 2.3

--- a/plonetheme/onegovbear/theme/scss/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/layout.scss
@@ -50,6 +50,7 @@ body {
 
   #portal-logo {
     img {
+      float: left;
       max-height: 50px;
       width: auto;
       @include screen-small {
