Implement ajax loading spinner.
Plone has a built in ajax spinner that is triggered for every ajax
request. This implementation replaces the default behaviour. It is now
possible to define which request should display a spinner and how long
is the loading tolerance before a spinner is shown.

--- a/plonetheme/onegovbear/theme/scss/content.scss
+++ b/plonetheme/onegovbear/theme/scss/content.scss
@@ -113,3 +113,16 @@ iframe {
     padding-left: 15px;
   }
 }
+
+#ajax-spinner {
+
+  position: fixed;
+  z-index: 9999;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, .6) url('++theme++plonetheme.onegovbear/images/spinner.gif') no-repeat center;
+
+  img { display: none; }
+}
