--- a/plonetheme/onegovbear/theme/scss/servicenavigation.scss
+++ b/plonetheme/onegovbear/theme/scss/servicenavigation.scss
@@ -57,6 +57,8 @@ $service-nav-link-color: $secondary-color !default;
 
           &:hover {
             background-color: transparent;
+            text-decoration: underline;
+            color: $link-hover-color;
           }
         }
       }
