In mobile view the page has no spacing to the top.

--- a/plonetheme/onegovbear/theme/scss/layout.scss
+++ b/plonetheme/onegovbear/theme/scss/layout.scss
@@ -67,6 +67,10 @@ body {
 
 #content {
   clear: both;
+  margin-top: 2em;
+  @include screen-large {
+    margin-top: 0;
+  }
 }
 
 #column-content {
