For consistency reasons make link in pathbar red on hover.

--- a/plonetheme/onegovbear/theme/scss/pathbar.scss
+++ b/plonetheme/onegovbear/theme/scss/pathbar.scss
@@ -36,6 +36,9 @@ $pathbar-font-weight: normal !default;
         font-weight: $pathbar-font-weight;
         font-size: $font-size-small;
         float: left;
+        &:hover {
+          color: $link-hover-color;
+        }
       }
       // White separator between pathbar lines
       &:before {
