Revert "Merge pull request #83 from OneGov/kb_listing_table"
This reverts commit 9ffe6eb4a78877b5f22205b855d3283756110ed2, reversing
changes made to 438ac38af84bca808d40c5a8aced2241e73aeea5.

The change did affect all tables but it should only have affected the
table in file listing blocks.

--- a/plonetheme/onegovbear/theme/scss/tables.scss
+++ b/plonetheme/onegovbear/theme/scss/tables.scss
@@ -91,6 +91,10 @@ table {
         background-color: $table-heading-bg-color;
       }
 
+      tr:nth-child(odd) td {
+        background-color: $table-odd-bg-color;
+      }
+
       td, th {
         text-align: left;
       }
