--- a/plonetheme/onegovbear/theme/scss/accessibility.scss
+++ b/plonetheme/onegovbear/theme/scss/accessibility.scss
@@ -1,21 +1,24 @@
 #accesskeys ul {
-  @include ul(inline);
+  @include ul();
 
-  > li > a:focus,
-  #portal-searchbox > a[accesskey]:focus {
-    background-color: $primary-color;
-    color: #fff;
-    font-size: 12px;
-    height: 27px;
-    left: 0;
-    min-width: 200px;
-    outline: none;
-    padding: 0 10px;
-    position: fixed;
-    text-decoration: none;
-    top: 0;
-    width: auto;
-    z-index: 999;
-    line-height: 27px;
+  > li {
+    display: inline-block;
+    > a:focus,
+    #portal-searchbox > a[accesskey]:focus {
+      background-color: $primary-color;
+      color: #fff;
+      font-size: 12px;
+      height: 27px;
+      left: 0;
+      min-width: 200px;
+      outline: none;
+      padding: 0 10px;
+      position: fixed;
+      text-decoration: none;
+      top: 0;
+      width: auto;
+      z-index: 999;
+      line-height: 27px;
+    }
   }
 }
