--- a/plonetheme/onegovbear/theme/scss/typography.scss
+++ b/plonetheme/onegovbear/theme/scss/typography.scss
@@ -1,30 +1,34 @@
 h1 {
   font-size: $font-size-h1;
   margin-bottom: 26px;
-  line-height: 33.6px;
+  font-weight: normal;
 }
 
 h2 {
   font-size: $font-size-h2;
   margin-bottom: 16px;
-  line-height: 28px;
+  font-weight: normal;
 }
 
 h3 {
   font-size: $font-size-h3;
   margin-bottom: 12px;
+  font-weight: normal;
 }
 
 h4 {
   font-size: $font-size-h4;
+  font-weight: normal;
 }
 
 h5 {
   font-size: $font-size-h5;
+  font-weight: normal;
 }
 
 h6 {
   font-size: $font-size-h6;
+  font-weight: normal;
 }
 
 p {
@@ -60,6 +64,7 @@ p {
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   font-family: $font-family-base;
+  vertical-align: baseline;
 
   &.documentFirstHeading {
     margin-top: 0;
