Hide archiveportlet according to customerrequest.

--- a/plonetheme/onegovbear/theme/scss/print.scss
+++ b/plonetheme/onegovbear/theme/scss/print.scss
@@ -60,6 +60,10 @@
     display: none;
   }
 
+  .portletArchiveListing {
+    display: none;
+  }
+
   * {
     -webkit-print-color-adjust: exact;
     print-color-adjust: exact;
