--- a/plonetheme/onegovbear/theme/scss/menues.scss
+++ b/plonetheme/onegovbear/theme/scss/menues.scss
@@ -88,11 +88,11 @@ dl.actionMenu dt {
 }
 
 @mixin mobilemenu {
-  position: fixed;
+  position: absolute;
   right: 0;
-  top: 80px;
+  top: 34px;
   z-index: 5;
-  width: 90%;
+  width: 100%;
   margin: auto;
   cursor: default;
 
