--- a/plonetheme/onegovbear/theme/scss/menues.scss
+++ b/plonetheme/onegovbear/theme/scss/menues.scss
@@ -90,9 +90,9 @@ dl.actionMenu dt {
 @mixin mobilemenu {
   position: absolute;
   right: 0;
+  left: 0;
   top: 34px;
   z-index: 5;
-  width: 100%;
   margin: auto;
   cursor: default;
 
