Page bottom not centered and sticky to bottom of the page.

--- a/plonetheme/onegovbear/theme/scss/actions.scss
+++ b/plonetheme/onegovbear/theme/scss/actions.scss
@@ -28,8 +28,9 @@
 
 
 #bottom-actions {
-  width: $page-wrapper-width;
-  margin: 0 auto;
+  max-width: $page-wrapper-width;
+  margin: 15px auto;
+ @include clearfix();
   #portal-siteactions {
     @include ul(plain);
     @include linklist;
