Details of review portlets floats on same line as the title.

--- a/plonetheme/onegovbear/theme/scss/portlets.scss
+++ b/plonetheme/onegovbear/theme/scss/portlets.scss
@@ -80,7 +80,7 @@ $portlet-column-bg-color: transparent !default;
   .portletItem {
     .portletItemDetails {
       color: $gray-light;
-      display: inline-block;
+      display: block;
     }
   }
 }
