Hide pathbar on front page.
Margin below the pathbar should be the same as before the pathbar.

--- a/plonetheme/onegovbear/theme/scss/startpage.scss
+++ b/plonetheme/onegovbear/theme/scss/startpage.scss
@@ -1,5 +1,9 @@
-body.portaltype-plone-site {
+body.portaltype-plone-site, body.portaltype-ftw-subsite-subsite {
   h1.documentFirstHeading {
+    @extend .hiddenStructure;
+  }
+
+  #breadcrumbs-wrapper {
     @extend .hiddenStructure;
   }
 }
